harness/fixtures/enforce-arrow-function/good/generator.ts
function* gen() {
  yield 1;
}
async function* asyncGen() {
  yield 1;
}
