harness/fixtures/enforce-arrow-function/bad/export.ts
export function baz() {
  return 1;
}
